--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,10 @@
 [pytest]
-addopts = -s -v # Опция для автоматического добавления флагов
+addopts = -s -v
 python_files = *_tests.py test_*.py
 python_classes = Test*
 python_functions = test_*
 markers =
     users: Маркировка для тестов, связанных с пользователями.
+    files: Маркировка для тестов, связанных с файлами.
     regression: Маркировка для регрессионных тестов.
     authentication: Маркировка для тестов, связанных с аутентификацией.
